# ops-hw-config

./: CMakeLists.txt  DESIGN.md  README.md
Accton/AS5712-54X/: devices.yaml  manifest.yaml  plugins.yaml  ports.yaml  qos.yaml
Accton/AS6712-32X/: manifest.yaml  plugins.yaml  ports.yaml  qos.yaml
Accton/AS7512-32X/: devices.yaml  fans.yaml  leds.yaml  manifest.yaml  plugins.yaml  ports.yaml  power.yaml  qos.yaml  thermal.yaml
Accton/AS7712-32X/: devices.yaml  fans.yaml  leds.yaml  manifest.yaml  ports.yaml  power.yaml  qos.yaml  thermal.yaml
Accton/Wedge-16X-AC/: devices.yaml  fans.yaml  manifest.yaml  ports.yaml
Generic-x86/X86-64/: fru.yaml  manifest.yaml  plugins.yaml  qos.yaml
Generic-x86/X86-64/P4/: ports.yaml
OpenSwitch/Appliance/: fru.yaml  manifest.yaml  qos.yaml
include/: config-yaml.h  i2c.h
src/: config-yaml.cpp  i2c.c  ops-config-yaml.pc.in
tests/: CMakeLists.txt  cfg_yaml_ut.cpp  cfg_yaml_ut.h.in  i2c_fakes.c  ops-config-yaml_test.md  test_config-yaml_ct.py
tests/yaml_files/: bad.devices.yaml  bad.fans.yaml  bad.fru.yaml  bad.leds.yaml  bad.manifest.yaml  bad.ports.yaml  bad.power.yaml  bad.thermal.yaml  devices.yaml  empty.manifest.yaml  fans.yaml  fru.yaml  good.manifest.yaml  leds.yaml  ports.yaml  power.yaml  thermal.yaml
